ci: update source

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -68,3 +68,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++FunctionRedirects=(OldName="/Script/TestDemo.AbilityTasks_PlayMontageAndWaitForEvent.OnMontageInterrupted",NewName="/Script/TestDemo.AbilityTasks_PlayMontageAndWaitForEvent.OnMontageCancel")
