ci: update source

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -71,3 +71,4 @@ ManualIPAddress=
 
 [CoreRedirects]
 +FunctionRedirects=(OldName="/Script/TestDemo.AbilityTasks_PlayMontageAndWaitForEvent.OnMontageInterrupted",NewName="/Script/TestDemo.AbilityTasks_PlayMontageAndWaitForEvent.OnMontageCancel")
++PropertyRedirects=(OldName="/Script/TestDemo.AbilityTasks_PlayMontageAndWaitForEvent.DamageEventReceived",NewName="/Script/TestDemo.AbilityTasks_PlayMontageAndWaitForEvent.OnDamageEventReceived")
