--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
 EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-GlobalDefaultGameMode="/Script/TestDemo.TestDemoGameMode"
+GlobalDefaultGameMode=/Script/Engine.GameMode
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
@@ -70,3 +70,6 @@ ManualIPAddress=
 
 
 [CoreRedirects]
++FunctionRedirects=(OldName="/Script/TestDemo.TD_WallRunComponent.ManageTick",NewName="/Script/TestDemo.TD_WallRunComponent.OnMovementModeChangedEvent")
++FunctionRedirects=(OldName="/Script/TestDemo.TD_WallRunComponent.CheckForFloor",NewName="/Script/TestDemo.TD_WallRunComponent.OnActorHitEvent_CheckFloor")
++PropertyRedirects=(OldName="/Script/TestDemo.TD_WallRunComponent.bShowDebugLine",NewName="/Script/TestDemo.TD_WallRunComponent.bShowTraceLine")
