--- a/Plugins/TD_CommonToolsPlugins/TD_CommonToolsPlugins.uplugin
+++ b/Plugins/TD_CommonToolsPlugins/TD_CommonToolsPlugins.uplugin
@@ -19,6 +19,11 @@
 			"Name": "TD_RegularExpression",
 			"Type": "Runtime",
 			"LoadingPhase": "Default"
+		},
+		{
+			"Name": "ImageTool",
+			"Type": "Runtime",
+			"LoadingPhase": "Default"
 		}
 	]
 }
